cmake_minimum_required(VERSION 3.10)
project(code)

set(CMAKE_CXX_STANDARD 11)

add_executable(code_main main.cpp)
add_executable(code_test test.cpp)

#nower_coder_2018_Multi_University_Training_Contest_One
add_executable(nower_coder_2018_Multi_University_Training_Contest_One_D nower_coder/Multi_University_Training_Contest/2018/one/D_Two_Graphs.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_One_J nower_coder/Multi_University_Training_Contest/2018/one/J_Different_Integers.cpp)

#nower_coder_2018_Multi_University_Training_Contest_One_Template
add_executable(nower_coder_2018_Multi_University_Training_Contest_One_Template_A nower_coder/Multi_University_Training_Contest/2018/one/Template/A.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_One_Template_B nower_coder/Multi_University_Training_Contest/2018/one/Template/B.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_One_Template_C nower_coder/Multi_University_Training_Contest/2018/one/Template/C.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_One_Template_D nower_coder/Multi_University_Training_Contest/2018/one/Template/D.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_One_Template_E nower_coder/Multi_University_Training_Contest/2018/one/Template/E.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_One_Template_F nower_coder/Multi_University_Training_Contest/2018/one/Template/F.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_One_Template_G nower_coder/Multi_University_Training_Contest/2018/one/Template/G.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_One_Template_H nower_coder/Multi_University_Training_Contest/2018/one/Template/H.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_One_Template_I nower_coder/Multi_University_Training_Contest/2018/one/Template/I.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_One_Template_J nower_coder/Multi_University_Training_Contest/2018/one/Template/J.cpp)


#nower_coder_2018_Multi_University_Training_Contest_Two
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_A nower_coder/Multi_University_Training_Contest/2018/two/A_run.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_D nower_coder/Multi_University_Training_Contest/2018/two/D_money.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_I nower_coder/Multi_University_Training_Contest/2018/two/I_car.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_J nower_coder/Multi_University_Training_Contest/2018/two/J_farm.cpp)

add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_J_Mine nower_coder/Multi_University_Training_Contest/2018/two/J_farm_mine.cpp)


#nower_coder_2018_Multi_University_Training_Contest_Two_Template
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_Template_A nower_coder/Multi_University_Training_Contest/2018/two/Template/A.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_Template_B nower_coder/Multi_University_Training_Contest/2018/two/Template/B.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_Template_C nower_coder/Multi_University_Training_Contest/2018/two/Template/C.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_Template_D nower_coder/Multi_University_Training_Contest/2018/two/Template/D.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_Template_E nower_coder/Multi_University_Training_Contest/2018/two/Template/E.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_Template_F nower_coder/Multi_University_Training_Contest/2018/two/Template/F.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_Template_G nower_coder/Multi_University_Training_Contest/2018/two/Template/G.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_Template_H nower_coder/Multi_University_Training_Contest/2018/two/Template/H.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_Template_I nower_coder/Multi_University_Training_Contest/2018/two/Template/I.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_Template_J nower_coder/Multi_University_Training_Contest/2018/two/Template/J.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_Template_K nower_coder/Multi_University_Training_Contest/2018/two/Template/K.cpp)


#nower_coder_2018_Multi_University_Training_Contest_Three
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_A nower_coder/Multi_University_Training_Contest/2018/three/A.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_C nower_coder/Multi_University_Training_Contest/2018/three/C.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_E nower_coder/Multi_University_Training_Contest/2018/three/E.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_H nower_coder/Multi_University_Training_Contest/2018/three/H.cpp)


#nower_coder_2018_Multi_University_Training_Contest_Three_Template
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_Template_A nower_coder/Multi_University_Training_Contest/2018/three/Template/A.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_Template_B nower_coder/Multi_University_Training_Contest/2018/three/Template/B.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_Template_C nower_coder/Multi_University_Training_Contest/2018/three/Template/C.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_Template_D nower_coder/Multi_University_Training_Contest/2018/three/Template/D.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_Template_E nower_coder/Multi_University_Training_Contest/2018/three/Template/E.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_Template_F nower_coder/Multi_University_Training_Contest/2018/three/Template/F.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_Template_G nower_coder/Multi_University_Training_Contest/2018/three/Template/G.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_Template_H nower_coder/Multi_University_Training_Contest/2018/three/Template/H.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_Template_I nower_coder/Multi_University_Training_Contest/2018/three/Template/I.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_Template_J nower_coder/Multi_University_Training_Contest/2018/three/Template/J.cpp)

#nower_coder_2018_Multi_University_Training_Contest_Four
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_D nower_coder/Multi_University_Training_Contest/2018/four/D.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_F nower_coder/Multi_University_Training_Contest/2018/four/F.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_G nower_coder/Multi_University_Training_Contest/2018/four/G.cpp)

#nower_coder_2018_Multi_University_Training_Contest_Four_Template
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_Template_A nower_coder/Multi_University_Training_Contest/2018/four/Template/A.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_Template_B nower_coder/Multi_University_Training_Contest/2018/four/Template/B.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_Template_C nower_coder/Multi_University_Training_Contest/2018/four/Template/C.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_Template_D nower_coder/Multi_University_Training_Contest/2018/four/Template/D.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_Template_E nower_coder/Multi_University_Training_Contest/2018/four/Template/E.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_Template_F nower_coder/Multi_University_Training_Contest/2018/four/Template/F.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_Template_G nower_coder/Multi_University_Training_Contest/2018/four/Template/G.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_Template_H nower_coder/Multi_University_Training_Contest/2018/four/Template/H.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_Template_I nower_coder/Multi_University_Training_Contest/2018/four/Template/I.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_Template_J nower_coder/Multi_University_Training_Contest/2018/four/Template/J.cpp)



#nower_coder_xiaobai_5
add_executable(nower_coder_xiaobai_5_A nower_coder/xiaobai/5/A.cpp)
add_executable(nower_coder_xiaobai_5_B nower_coder/xiaobai/5/B.cpp)
add_executable(nower_coder_xiaobai_5_C nower_coder/xiaobai/5/C.cpp)
add_executable(nower_coder_xiaobai_5_D nower_coder/xiaobai/5/D.cpp)
add_executable(nower_coder_xiaobai_5_E nower_coder/xiaobai/5/E.cpp)
add_executable(nower_coder_xiaobai_5_F nower_coder/xiaobai/5/F.cpp)
add_executable(nower_coder_xiaobai_5_G nower_coder/xiaobai/5/G.cpp)
add_executable(nower_coder_xiaobai_5_H nower_coder/xiaobai/5/H.cpp)
add_executable(nower_coder_xiaobai_5_I nower_coder/xiaobai/5/I.cpp)
add_executable(nower_coder_xiaobai_5_J nower_coder/xiaobai/5/J.cpp)


#hduoj_Multi-University_Training_Contest_2018_1
add_executable(hduoj_Multi-University_Training_Contest_2018_1_A HDUOJ/Multi-University_Training_Contest/2018/1/A.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_1_B HDUOJ/Multi-University_Training_Contest/2018/1/B.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_1_C HDUOJ/Multi-University_Training_Contest/2018/1/C.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_1_D HDUOJ/Multi-University_Training_Contest/2018/1/D.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_1_K HDUOJ/Multi-University_Training_Contest/2018/1/K.cpp)


#hduoj_Multi-University_Training_Contest_2018_2
add_executable(hduoj_Multi-University_Training_Contest_2018_2_C HDUOJ/Multi-University_Training_Contest/2018/2/C.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_2_D HDUOJ/Multi-University_Training_Contest/2018/2/D.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_2_E HDUOJ/Multi-University_Training_Contest/2018/2/E.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_2_E_Hash HDUOJ/Multi-University_Training_Contest/2018/2/E_hash.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_2_F HDUOJ/Multi-University_Training_Contest/2018/2/F.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_2_G HDUOJ/Multi-University_Training_Contest/2018/2/G.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_2_J HDUOJ/Multi-University_Training_Contest/2018/2/J.cpp)
