cmake_minimum_required(VERSION 3.10)
project(code)

set(CMAKE_CXX_STANDARD 11)

add_executable(code_main main.cpp)
add_executable(code_test test.cpp)

#nower_coder_2018_Multi_University_Training_Contest_One
add_executable(nower_coder_2018_Multi_University_Training_Contest_One_D nower_coder/Multi_University_Training_Contest/2018/one/D_Two_Graphs.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_One_J nower_coder/Multi_University_Training_Contest/2018/one/J_Different_Integers.cpp)

#nower_coder_2018_Multi_University_Training_Contest_Two
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_A nower_coder/Multi_University_Training_Contest/2018/two/A_run.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_D nower_coder/Multi_University_Training_Contest/2018/two/D_money.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_I nower_coder/Multi_University_Training_Contest/2018/two/I_car.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_J nower_coder/Multi_University_Training_Contest/2018/two/J_farm.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Two_J_Mine nower_coder/Multi_University_Training_Contest/2018/two/J_farm_mine.cpp)

#nower_coder_2018_Multi_University_Training_Contest_Three
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_A nower_coder/Multi_University_Training_Contest/2018/three/A.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_C_rope nower_coder/Multi_University_Training_Contest/2018/three/C_rope.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_C_splay nower_coder/Multi_University_Training_Contest/2018/three/C_splay.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_E nower_coder/Multi_University_Training_Contest/2018/three/E.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Three_H nower_coder/Multi_University_Training_Contest/2018/three/H.cpp)

#nower_coder_2018_Multi_University_Training_Contest_Four
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_A nower_coder/Multi_University_Training_Contest/2018/four/A.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_D nower_coder/Multi_University_Training_Contest/2018/four/D.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_F nower_coder/Multi_University_Training_Contest/2018/four/F.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Four_G nower_coder/Multi_University_Training_Contest/2018/four/G.cpp)

#nower_coder_2018_Multi_University_Training_Contest_Five
add_executable(nower_coder_2018_Multi_University_Training_Contest_Five_A nower_coder/Multi_University_Training_Contest/2018/five/A.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Five_E nower_coder/Multi_University_Training_Contest/2018/five/E.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Five_E_mine nower_coder/Multi_University_Training_Contest/2018/five/E_mine.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Five_F nower_coder/Multi_University_Training_Contest/2018/five/F.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Five_G nower_coder/Multi_University_Training_Contest/2018/five/G.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Five_J nower_coder/Multi_University_Training_Contest/2018/five/J.cpp)


#nower_coder_2018_Multi_University_Training_Contest_Six
add_executable(nower_coder_2018_Multi_University_Training_Contest_Six_A nower_coder/Multi_University_Training_Contest/2018/six/A.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Six_D nower_coder/Multi_University_Training_Contest/2018/six/D.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Six_J nower_coder/Multi_University_Training_Contest/2018/six/J.cpp)

#nower_coder_2018_Multi_University_Training_Contest_Seven
add_executable(nower_coder_2018_Multi_University_Training_Contest_Seven_A nower_coder/Multi_University_Training_Contest/2018/seven/A.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Seven_C nower_coder/Multi_University_Training_Contest/2018/seven/C.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Seven_E nower_coder/Multi_University_Training_Contest/2018/seven/E.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Seven_J nower_coder/Multi_University_Training_Contest/2018/seven/J.cpp)

#nower_coder_2018_Multi_University_Training_Contest_Eight
add_executable(nower_coder_2018_Multi_University_Training_Contest_Eight_H nower_coder/Multi_University_Training_Contest/2018/eight/H.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Eight_B nower_coder/Multi_University_Training_Contest/2018/eight/B.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Eight_G nower_coder/Multi_University_Training_Contest/2018/eight/G.cpp)

#nower_coder_2018_Multi_University_Training_Contest_Nine
add_executable(nower_coder_2018_Multi_University_Training_Contest_Nine_E nower_coder/Multi_University_Training_Contest/2018/nine/E.cpp)
add_executable(nower_coder_2018_Multi_University_Training_Contest_Nine_G nower_coder/Multi_University_Training_Contest/2018/nine/G.cpp)

#hduoj_Multi-University_Training_Contest_2018_1
add_executable(hduoj_Multi-University_Training_Contest_2018_1_A HDUOJ/Multi-University_Training_Contest/2018/1/A.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_1_B HDUOJ/Multi-University_Training_Contest/2018/1/B.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_1_C HDUOJ/Multi-University_Training_Contest/2018/1/C.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_1_D HDUOJ/Multi-University_Training_Contest/2018/1/D.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_1_K HDUOJ/Multi-University_Training_Contest/2018/1/K.cpp)

#hduoj_Multi-University_Training_Contest_2018_2
add_executable(hduoj_Multi-University_Training_Contest_2018_2_C HDUOJ/Multi-University_Training_Contest/2018/2/C.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_2_D HDUOJ/Multi-University_Training_Contest/2018/2/D.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_2_E HDUOJ/Multi-University_Training_Contest/2018/2/E.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_2_E_Hash HDUOJ/Multi-University_Training_Contest/2018/2/E_hash.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_2_F HDUOJ/Multi-University_Training_Contest/2018/2/F.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_2_G HDUOJ/Multi-University_Training_Contest/2018/2/G.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_2_J HDUOJ/Multi-University_Training_Contest/2018/2/J.cpp)

#hduoj_Multi-University_Training_Contest_2018_3
add_executable(hduoj_Multi-University_Training_Contest_2018_3_A HDUOJ/Multi-University_Training_Contest/2018/3/A.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_3_C HDUOJ/Multi-University_Training_Contest/2018/3/C.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_3_D HDUOJ/Multi-University_Training_Contest/2018/3/D.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_3_F HDUOJ/Multi-University_Training_Contest/2018/3/F.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_3_L HDUOJ/Multi-University_Training_Contest/2018/3/L.cpp)

#hduoj_Multi-University_Training_Contest_2018_4
add_executable(hduoj_Multi-University_Training_Contest_2018_4_B HDUOJ/Multi-University_Training_Contest/2018/4/B.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_4_D HDUOJ/Multi-University_Training_Contest/2018/4/D.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_4_K HDUOJ/Multi-University_Training_Contest/2018/4/K.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_4_L HDUOJ/Multi-University_Training_Contest/2018/4/L.cpp)

#hduoj_Multi-University_Training_Contest_2018_5
add_executable(hduoj_Multi-University_Training_Contest_2018_5_B HDUOJ/Multi-University_Training_Contest/2018/5/B.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_5_E HDUOJ/Multi-University_Training_Contest/2018/5/E.cpp)

#hduoj_Multi-University_Training_Contest_2018_6
add_executable(hduoj_Multi-University_Training_Contest_2018_6_A HDUOJ/Multi-University_Training_Contest/2018/6/A.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_6_B HDUOJ/Multi-University_Training_Contest/2018/6/B.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_6_H HDUOJ/Multi-University_Training_Contest/2018/6/H.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_6_L HDUOJ/Multi-University_Training_Contest/2018/6/L.cpp)

#hduoj_Multi-University_Training_Contest_2018_7
add_executable(hduoj_Multi-University_Training_Contest_2018_7_A HDUOJ/Multi-University_Training_Contest/2018/7/A.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_7_E HDUOJ/Multi-University_Training_Contest/2018/7/E.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_7_J HDUOJ/Multi-University_Training_Contest/2018/7/J.cpp)

#hduoj_Multi-University_Training_Contest_2018_8
add_executable(hduoj_Multi-University_Training_Contest_2018_8_A HDUOJ/Multi-University_Training_Contest/2018/8/A.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_8_E HDUOJ/Multi-University_Training_Contest/2018/8/E.cpp)
add_executable(hduoj_Multi-University_Training_Contest_2018_8_J HDUOJ/Multi-University_Training_Contest/2018/8/J.cpp)